# txdronelog

./: .env.prod.example  .gitignore  docker-compose.prod.yml  index.html  package-lock.json  package.json
public/: manifest.json
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src/components/dashboard/: Dashboard.tsx  EmailSignatureModal.tsx  SettingsModal.tsx
src/i18n/locales/: en.json
