[package]
name = "open-dronelog"
version = "0.1.0"
description = "txDroneLog — A drone flight log analyzer for Texas Drone Company (fork of open-dronelog)"
authors = ["Open DroneLog Contributors"]
edition = "2021"
rust-version = "1.70"
license = "AGPL-3.0-only"

[lib]
name = "drone_logbook_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
base64 = "0.22"

[dependencies]
# Tauri v2 Core (optional — only for desktop builds)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-android-fs = { version = "=28.0.0", optional = true }
tauri-plugin-persisted-scope = { version = "2", optional = true }

# Web server (optional — only for Docker/web builds)
axum = { version = "0.7", features = ["multipart"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tokio-cron-scheduler = { version = "0.13", optional = true }
cron = { version = "0.15", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DuckDB - Embedded analytical database (bundled = no system install required)
duckdb = { version = "1.0", features = ["bundled", "json", "parquet"] }

# DJI Log Parser
dji-log-parser = "0.5.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for DJI API key fetching
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SHA256 hashing for file deduplication
sha2 = "0.10"

# Backup archive (tar + gzip)
flate2 = "1"
tar = "0.4"

# Password hashing (argon2id) & session tokens
argon2 = "0.5"
rand = "0.8"

# File utilities
dirs = "5"
reverse_geocoder = "4.1.1"

[features]
default = ["tauri-app"]
tauri-app = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-http",
    "dep:tauri-plugin-log",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-window-state",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-android-fs",
    "dep:tauri-plugin-persisted-scope",
    "custom-protocol",
]
web = ["dep:axum", "dep:tower-http", "dep:tokio-cron-scheduler", "dep:cron"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

[profile.release]
# The dji-log-parser library can panic on truncated/corrupted log files,
# Using "abort" would bypass catch_unwind entirely, causing app crashes.
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
